--- a/atividade4.html
+++ b/atividade4.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 3</title>
-    <script src="atividade3.js" defer></script>
+    <title>Atividade 4</title>
+    <script src="atividade4.js" defer></script>
 </head>
 <body>
+    <h1>Remover item da lista</h1>
     <ul id="lista">
         <li>item1</li>
         <li>item2</li>
+        <li id="item-remover">item3</li>
     </ul>
-    <button onclick="adicionarItem()">Adicionar item</button>
+    <button onclick="removerItem()">Remover item</button>
 </body>
 </html>
